# code-runner

./: .gitignore  Makefile  pyproject.toml  test1.js
client/: index.html  package.json  pnpm-lock.yaml
client/src/: App.tsx  utils.ts
client/src/components/: Editor.tsx  FileExplorer.tsx  Terminal.tsx
client/src/hooks/: use-ws.ts
playground/: test1.js
server/: app.py
server/static/: index.html
