[tool.poetry]
name = "code-runner"
version = "0.1.0"
description = ""
authors = ["agnibha-chatterjee <agni.bhaaa@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.112.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
